Replaced linked lists with array lists for performance improvements